// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ hZYoTg"
  >
    text
    <span
      class="sc-gsnTZi dkYiBH"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ hZYoTg"
  >
    text
    <span
      class="sc-gsnTZi bodcSJ"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
